--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,11 @@ footer {
     width: 100%;
     margin: 0 0 4em 0;
 }
+.image.featured2 {
+    display: block;
+    width: 100%;
+    margin: 0 0 4em 0;
+}
 
 
 .videoWrapper {
@@ -264,6 +269,12 @@ footer {
 	left: 0%;
 	width: 100%;
 	height: 100%;
+}
+.orgaWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
 }
 
 .image.featured2 {
@@ -620,10 +631,17 @@ header .icon.circled {
     padding: 6em 0 6em 0;
 }
 
-.wrapper.style1 {}
+.wrapper.style1 {
+   
+    
+}
 
 .wrapper.style2 {
     padding-top: 0;
+}
+.wrapper.style3 {
+     background: #f0f4f4;
+    align-self: center;
 }
 /*********************************************************************************/
 /* Header                                                                        */
@@ -739,7 +757,7 @@ header .icon.circled {
 /*********************************************************************************/
 
 #nav {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -829,7 +847,7 @@ header .icon.circled {
 .dropotron li {
     border-top: solid 1px rgba(128, 128, 128, 0.2);
     color: #5b5b5b;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 
 .dropotron li:first-child {
@@ -837,7 +855,7 @@ header .icon.circled {
 }
 
 .dropotron li:hover {
-    color: white;
+    color: #ef8376;
 }
 
 .dropotron li a,
@@ -898,6 +916,10 @@ header .icon.circled {
 
 #content > section {
     margin-bottom: 0;
+}
+#content > section2 {
+    margin-bottom: 0;
+    margin-left: 100;
 }
 /*********************************************************************************/
 /* Sidebar                                                                       */
@@ -1119,3 +1141,189 @@ header .icon.circled {
     text-align: left;
     font-size: 1.1em;
 }
+
+
+
+
+
+/*********************************************************************************/
+/* Organigramm                                                                   */
+/*********************************************************************************/
+
+
+/*
+*{
+
+	position: relative;
+}
+*/
+/* Generic styling */
+
+.organigramm{
+	width: 100%;
+	max-width: 1142px;
+	margin: auto 33%;
+	padding: auto 40px;
+    min-height: 500px;
+    position: inherit;
+}
+
+
+
+.organigramm ul{ 
+	padding: 0;
+	margin: 0;
+	list-style: none;
+    position: inherit;
+}
+
+.organigramm ul a{
+	display: block;
+	background: #ccc;
+	border: 4px solid #fff;
+	text-align: center;
+	overflow: hidden;
+	font-size: .7em;
+	text-decoration: none;
+	font-weight: bold;
+	color: #333;
+	height: 70px;
+	margin-bottom: -26px;
+	box-shadow: 4px 4px 9px -4px rgba(0,0,0,0.4);
+	-webkit-transition: all linear .1s;
+	-moz-transition: all linear .1s;
+	transition: all linear .1s;
+    position: inherit;
+}
+
+
+.organigramm ul a span{
+	top: 50%;
+	margin-top: -0.7em;
+	display: block;
+    position: relative;
+}
+
+.departments{
+	position: absolute;
+	width: 100%;
+}
+
+.departments > li:first-child{	
+	width: 18.59894921190893%;
+	height: 64px;
+	margin: 0 auto 92px auto;		
+	padding-top: 25px;
+	border-bottom: 4px solid white;
+	z-index: 1;	
+    position: inherit;
+}
+
+
+.departments > li:first-child{	
+	float: left;
+	left: 27.2%;
+	border-right: 4px solid white;	
+    position: inherit;
+}
+
+.departments > li:first-child a{
+	width: 100%;
+    position: inherit;
+}
+
+
+
+.departments > li:first-child a{
+	right: 25px;
+    position: inherit;
+}
+
+.department:first-child,
+.departments li:nth-child(2){
+	margin-left: 0;
+	clear: left;	
+    position: inherit;
+}
+
+.departments:after{
+	content: "";
+	display: block;
+	position: absolute;
+	width: 81.1%;
+	height: 22px;	
+	border-top: 4px solid #fff;
+	border-right: 4px solid #fff;
+	border-left: 4px solid #fff;
+	margin: 0 auto;
+	top: 130px;
+	left: 9.1%
+}
+
+.department:before{
+	content: "";
+	display: block;
+	position: absolute;
+	width: 0;
+	height: 22px;
+	z-index: 1;
+	top: -22px;
+	left: 50%;
+	margin-left: -4px;
+}
+
+.department{
+	border-left: 4px solid #c2baba;
+	width: 18.59894921190893%;
+	float: left;
+	margin-left: 1.751313485113835%;
+	margin-bottom: 60px;
+    position: inherit;
+}
+.department > a{
+	margin: 0 0 -26px -4px;
+	z-index: 1;
+    position: relative;
+}
+
+.department > a:hover{	
+	height: 80px;
+    position: relative;
+}
+
+.department > ul{
+	margin-top: 0px;
+	margin-bottom: 0px;
+    position: inherit;
+}
+
+.department li{	
+	padding-left: 25px;
+	border-bottom: 4px solid #c2baba;
+	height: 80px;	
+    position: relative;
+}
+
+.department li a{
+	background: #fff;
+	top: 48px;	
+	position: absolute;
+	z-index: 1;
+	width: 90%;
+	height: 60px;
+	vertical-align: middle;
+	right: -1px;
+	background-image: -moz-linear-gradient(-45deg,  rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 100%) !important;
+	background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(0,0,0,0.25)), color-stop(100%,rgba(0,0,0,0)))!important;
+	background-image: -webkit-linear-gradient(-45deg,  rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 100%)!important;
+	background-image: -o-linear-gradient(-45deg,  rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 100%)!important;
+	background-image: -ms-linear-gradient(-45deg,  rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 100%)!important;
+	background-image: linear-gradient(135deg,  rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 100%)!important;
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40000000', endColorstr='#00000000',GradientType=1 );
+}
+
+
+/* Department/ section colors */
+.department.dep-a a{ background: #FFD600; }
+.department.dep-b a{ background: #AAD4E7; }
+.department.dep-c a{ background: #dDf; }
